--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,3 +1,4 @@
 minhpt:
   name: Pham Tuan Minh
-  linkedin: www.linkedin.com/in/ptminh
+  linkedin: https://www.linkedin.com/in/ptminh
+  url: https://www.linkedin.com/in/ptminh
