--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: FJZL6TB7JM
+    id: G-FJZL6TB7JM
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
